2018-11-15  Paul Eggert  <eggert@cs.ucla.edu>

	mktime: simplify offset guess
	[BZ#23789]
	* time/mktime.c (__mktime_internal): Omit excess precision.

	mktime: new test for mktime failure
	[BZ#23789]
	Based on a test suggested by Albert Aribaud in:
	https://www.sourceware.org/ml/libc-alpha/2018-10/msg00662.html
	* time/Makefile (tests): Add bug-mktime4.
	* time/bug-mktime4.c: New file.

	mktime: fix EOVERFLOW bug
	[BZ#23789]
	* time/mktime.c [!_LIBC && !DEBUG_MKTIME]:
	Include libc-config.h, not config.h, for __set_errno.
	(guess_time_tm, __mktime_internal): Set errno to EOVERFLOW on overflow.

2018-11-14  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/dl-sysdep.c (check_no_hidden): Use
	__attribute_copy__ to copy attributes from name. Drop static qualifier
	to avoid warnings about leaf attribute not having effect on static
	functions.

2018-11-13  Florian Weimer  <fweimer@redhat.com>

	* malloc/malloc.c (fastbin_push_entry): New function.
	(fastbin_pop_entry): Likewise.  Replaces REMOVE_FB.
	(REMOVE_FB): Remove macro.
	(_int_malloc): Use fastbin_pop_entry and reindent.
	(_int_free): Use fastbin_push_entry.
	(malloc_consolidate): Use atomic_exchange_acquire.

2018-11-13  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/mips/__longjmp.c (__longjmp): Define alias manually with
	alias attribute, not with strong_alias.

	* include/libc-symbols.h [SHARED && !NO_HIDDEN && !__ASSEMBLER__]
	(__hidden_ver2): New macro.  Use old definition of __hidden_ver1
	with additional parameter thread.
	[SHARED && !NO_HIDDEN && !__ASSEMBLER__] (__hidden_ver1): Define
	in terms of __hidden_ver2.
	(hidden_tls_def): New macro.
	(libc_hidden_tls_def): Likewise.
	(rtld_hidden_tls_def): Likewise.
	(libm_hidden_tls_def): Likewise.
	(libmvec_hidden_tls_def): Likewise.
	(libresolv_hidden_tls_def): Likewise.
	(librt_hidden_tls_def): Likewise.
	(libdl_hidden_tls_def): Likewise.
	(libnss_files_hidden_tls_def): Likewise.
	(libnsl_hidden_tls_def): Likewise.